azure/tasks/02-vnet-vmss/modules/vmss/glb.tf
resource "azurerm_application_gateway" "glb" {
  name                = "${var.project_name}-${var.environment}-glb"
  resource_group_name = var.resource_group_name
  location            = var.location

  depends_on = [
    azurerm_network_security_rule.glb_gateway_manager,
    azurerm_network_security_rule.glb_azure_lb,
  ]

  sku {
    name     = "Standard_v2"
    tier     = "Standard_v2"
    capacity = 2
  }

  gateway_ip_configuration {
    name      = "appgw-ipconfig"
    subnet_id = var.glb_subnet_id
  }

  frontend_port {
    name = "http-port"
    port = 80
  }

  frontend_port {
    name = "https-port"
    port = 443
  }

  frontend_ip_configuration {
    name                 = "public-ip"
    public_ip_address_id = azurerm_public_ip.glb.id
  }

  backend_address_pool {
    name = "vmss-pool"
  }

  probe {
    name                = "http-probe"
    protocol            = "Http"
    path                = "/"
    host                = "127.0.0.1"
    interval            = 30
    timeout             = 30
    unhealthy_threshold = 3
  }

  backend_http_settings {
    name                  = "http-settings"
    port                  = 80
    protocol              = "Http"
    cookie_based_affinity  = "Disabled"
    request_timeout       = 30
    probe_name            = "http-probe"
  }

  http_listener {
    name                           = "http-listener"
    frontend_ip_configuration_name = "public-ip"
    frontend_port_name             = "http-port"
    protocol                       = "Http"
  }

  request_routing_rule {
    name                       = "http-rule"
    rule_type                  = "Basic"
    http_listener_name         = "http-listener"
    backend_address_pool_name  = "vmss-pool"
    backend_http_settings_name = "http-settings"
    priority                   = 100
  }

  tags = var.tags
}

resource "azurerm_public_ip" "glb" {
  name                = "${var.project_name}-${var.environment}-glb-pip"
  location            = var.location
  resource_group_name = var.resource_group_name
  allocation_method   = "Static"
  sku                 = "Standard"
  tags                = var.tags
}
